--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"debug": "~0.7.4"
 	},
 	"engines": {
-		"node": "0.8.x",
-		"npm": "1.1.x"
+		"node": ">=0.8.x",
+		"npm": ">=1.1.x"
 	},
 	"devDependencies": {
 		"mocha": "1.x",
